Fix overlapping error messages

--- a/src/app/create/components/who-checkbox/who-checkbox.component.scss
+++ b/src/app/create/components/who-checkbox/who-checkbox.component.scss
@@ -1,11 +1,12 @@
 #who-checkbox {
 	$checkbox-label-padding: 8px;
-	
+
 	display: flex;
 	flex-direction: column;
 	margin-top: 8px;
 
-	::ng-deep .mat-checkbox-label, mat-error {
+	::ng-deep .mat-checkbox-label,
+	mat-error {
 		padding-left: $checkbox-label-padding;
 	}
 
@@ -28,8 +29,8 @@
 }
 
 #who-checkbox.error {
-    border: #b00020 2px solid;
-    border-radius: 4px;
-    padding: 16px;
-    margin: -16px;
+	border: #b00020 2px solid;
+	border-radius: 4px;
+	padding: 8px 16px;
+	margin: 8px -16px;
 }
